# Bandit-Dan-battle-bot

./: .gitmodules  LICENSE  README.md
battle_bot_description/: CMakeLists.txt  knee_mount.stl  left_foot.stl  package.xml  robot.urdf  servo.part  servo.stl  thigh_bracket.part  thigh_bracket.stl
battle_bot_description/launch/: description.launch
battle_bot_description/meshes/: ankle_mount.part  knee_mount.part  left_foot.part  part_1.part  servo.part
battle_bot_description/urdf/: battle-bot.urdf  battle-bot.urdf.xacro  config.json  part_1.stl
battle_bot_viz/: CMakeLists.txt  package.xml
battle_bot_viz/launch/: view_diagnostics.launch  view_model.launch  view_robot.launch
