<?xml version="1.0"?>
<package>
  <name>battle_bot_viz</name>
  <version>0.6.3</version>
  <description>Visualization configuration for battle-bot</description>

  <author email="rgariepy@clearpathrobotics.com">Daniel Ruiz</author>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_console</run_depend>
  <run_depend>rqt_robot_monitor</run_depend>

  <export>
  </export>
</package>
